<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_pic">

    <TextView
        android:id="@+id/num_people_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_people"
        android:textSize="@dimen/label_text_size"
        android:labelFor="@id/num_attend_edit_text"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/default_margin"
        />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"

        app:layout_constraintLeft_toRightOf="@id/num_people_text"
        app:layout_constraintBaseline_toBaselineOf="@id/num_people_text"
        />

    <TextView
        android:id="@+id/how_hungry_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        android:labelFor="@id/hungry_radio_group"

        app:layout_constraintLeft_toLeftOf="@id/num_people_text"
        app:layout_constraintTop_toBottomOf="@id/num_people_text"/>

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintLeft_toLeftOf="@id/how_hungry_text"
        app:layout_constraintTop_toBottomOf="@id/how_hungry_text">
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintLeft_toLeftOf="@id/how_hungry_text"
            app:layout_constraintTop_toBottomOf="@id/how_hungry_text"/>
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"

            app:layout_constraintLeft_toRightOf="@id/light_radio_button"
            app:layout_constraintTop_toBottomOf="@id/how_hungry_text"/>
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/v_hungry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintLeft_toRightOf="@id/medium_radio_button"
            app:layout_constraintTop_toBottomOf="@id/how_hungry_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/total_pizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:textSize="24sp"

        app:layout_constraintLeft_toLeftOf="@id/hungry_radio_group"
        app:layout_constraintTop_toBottomOf="@id/hungry_radio_group"
        />

    <Button
        android:id="@+id/calc_button"
        android:text="@string/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:onClick="calculateClick"

        app:layout_constraintLeft_toLeftOf="@id/num_pizzas_text_view"
        app:layout_constraintTop_toBottomOf="@id/num_pizzas_text_view"/>

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/pizza"
        app:layout_constraintLeft_toLeftOf="@id/calc_button"
        app:layout_constraintTop_toBottomOf="@id/calc_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>